--- a/S5B-docker-07-dockerize-to-do-app-on-python-flask/docker-compose.yml
+++ b/S5B-docker-07-dockerize-to-do-app-on-python-flask/docker-compose.yml
@@ -1,25 +1,24 @@
-version: "3.7"
-
+version: '3.7'
 services:
-    database:
-        image: mysql:5.7
-        environment:
-            MYSQL_ROOT_PASSWORD: R1234r
-            MYSQL_DATABASE: todo_db
-            MYSQL_USER: clarusway
-            MYSQL_PASSWORD: Clarusway_1
-        networks:
-            - clarusnet
-    myapp:
-        build: .
-        restart: always
-        depends_on:
-            - database
-        ports:
-            - "80:80"
-        networks:
-            - clarusnet
+  database:
+    image: mysql:5.7
+    environment:
+      MYSQL_ROOT_PASSWORD: R1234r
+      MYSQL_DATABASE: todo_db
+      MYSQL_USER: bekir
+      MYSQL_PASSWORD: Bekir_123
+    networks:
+      - bekirnet
+  myapp:
+     build: . 
+     restart: always
+     depends_on:
+       - database
+     ports:
+       - "80:80"
+     networks:
+       - bekirnet
 
 networks:
-    clarusnet:
-        driver: bridge
+  bekirnet:
+    driver: bridge
